exam ready, before modifying lesson

--- a/Ex-1/AI_exam_ex_1.ipynb
+++ b/Ex-1/AI_exam_ex_1.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "5be1e677",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "e1db128b",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "caecc567",
    "metadata": {},
    "outputs": [
@@ -198,26 +198,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 64,
    "id": "a6f9a585-c281-4ec0-863e-6d4ec3b0bf12",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Path finding solution\n",
-    "def present_with_higher_cost(queue, node): #NECESSARY?? DELETE IF NOT, ALSO CHECK A* in lesson and remove it if not necessary\n",
+    "def present_with_higher_value(queue, node):\n",
     "    if node.state in queue:\n",
-    "        if queue[node.state].pathcost > node.pathcost: #nota: sto considerando il costo del percorso\n",
+    "        if queue[node.state].value > node.value: \n",
     "            return True\n",
     "    return False\n",
     "\n",
-    "\n",
     "#all the heuristics\n",
-    "#H = Heu.l1_norm\n",
-    "#H = Heu.l2_norm\n",
-    "H = Heu.chebyshev\n",
+    "H = Heu.l1_norm #manhattan - best one, closer to h*\n",
+    "#H = Heu.l2_norm #distanza vettoriale\n",
+    "#H = Heu.chebyshev\n",
     "\n",
     "def a_star(environment, cost_dict): #graph search, returns (path, time_cost, space_cost)\n",
-    "    #E' COPIA INCOLLA DI GREEDY SEARCH CON CAMBIO DEL VALORE DEL NODO: diventa parent.pathcost + 1 + heuristic\n",
     "\n",
     "    queue = PriorityQueue() #ordinata per euristica\n",
     "    p1 = environment.state_to_pos(environment.startstate)\n",
@@ -236,33 +234,22 @@
     "        # Retrieve node from the queue\n",
     "        node = queue.remove()\n",
     "        if node.state == environment.goalstate:\n",
-    "            #nota: sto facendo il check sul nodo estratto e non sul figlio estratto, questo per garantire l'ottimalita.\n",
-    "            #In BFS posso fare il controllo sul figlio (con performance maggiori perche' evito di generare un livello di figli\n",
-    "            #ad un livello inferiore, che e' una misura esponenziale) perche' quando visito un nodo in BFS allora l'ho raggiunto\n",
-    "            #attraverso il percorso piu' breve (perche' il costo degli archi e' identico). In UCS invece il nodo che poppo potrebbe\n",
-    "            #avere un costo superiore del nodo che avrei avuto successivamente nella coda, quindi non faccio il check sui figli\n",
     "            return build_path(node), time_cost, space_cost\n",
     "        \n",
     "        explored.add(node.state)\n",
     "        \n",
     "        # Look around\n",
     "        for action in range(environment.action_space.n):\n",
-    "            \n",
-    "            # Child node where value and pathcost are both the pathcost of parent + 1\n",
-    "            #il nostro value e' il pathcost, voglio ordinare la queue per pathcost \n",
     "\n",
     "            nextState = environment.sample(node.state, action)\n",
     "\n",
-    "            #NOTA: chiaramente l'euristica e' dal child state al goal state, mica dal parent node al goal state\n",
     "            p1 = environment.state_to_pos(nextState)\n",
     "            p2 = environment.state_to_pos(environment.goalstate)\n",
     "            heuristic = H(p1, p2)\n",
     "\n",
-    "            #formalmente sarebbe parentNode.pathcost + cost(parentNode, child), ma visto che siamo in una griglia ho sempre un offset di 1\n",
-    "            #Noda che Greedy Search usa SOLO l'euristica per riordinare la priority queue\n",
-    "            nodeCost = get_cost(nextState, environment.grid, cost_dict)\n",
-    "            #child = Node(nextState, node, node.pathcost + 1, node.pathcost + 1 + heuristic) #old one\n",
-    "            child = Node(nextState, node, node.pathcost + nodeCost, node.pathcost + nodeCost + heuristic) #old one\n",
+    "            stepCost = get_cost(nextState, environment.grid, cost_dict)\n",
+    "            #child = Node(nextState, node, node.pathcost + 1, node.pathcost + 1 + heuristic) #old one, no more uniform cost\n",
+    "            child = Node(nextState, node, node.pathcost + stepCost, node.pathcost + stepCost + heuristic) #variable step cost\n",
     "            \n",
     "            time_cost += 1\n",
     "            \n",
@@ -273,15 +260,13 @@
     "                queue.replace(child)\n",
     "                \n",
     "        space_cost = max(space_cost, len(queue) + len(explored))\n",
-    "\n",
     "    \n",
-    "    return None, time_cost, space_cost\n",
-    "    \n"
+    "    return None, time_cost, space_cost"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 65,
    "id": "dadd6fc4",
    "metadata": {},
    "outputs": [],
@@ -289,7 +274,7 @@
     "env_name = 'AquaticEnv-v0'\n",
     "env = gym.make(env_name)\n",
     "\n",
-    "cost_dict = {'F': 100, 'E': -1} #to avoid F states\n",
+    "cost_dict = {'F': 4, 'E': -1} #to avoid F states, works with anything over 4\n",
     "#cost_dict = {'F': 2, 'E': -1} #default\n",
     "algorithm =  a_star\n",
     "\n",
@@ -307,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 66,
    "id": "d28ff6c7",
    "metadata": {},
    "outputs": [
@@ -362,9 +347,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fe369ddc-833d-47c9-92bd-b0798bb2bf5b",
+   "metadata": {},
+   "source": [
+    "Perfomances on default:\n",
+    "Manhattan distance: \n",
+    "Time cost: 105, Space cost: 52\n",
+    "\n",
+    "l2 norm:\n",
+    "Time cost: 221, Space cost: 72\n",
+    "\n",
+    "chev:\n",
+    "Time cost: 249, Space cost: 77\n",
+    "\n",
+    "----------------------------------\n",
+    "\n",
+    "Performances on \"avoid F\" with F = 100: #here F cells are extremely bad, so they are never considered\n",
+    "Manhattan distance: \n",
+    "Time cost: 153, Space cost: 71\n",
+    "\n",
+    "l2 norm:\n",
+    "Time cost: 153, Space cost: 71\n",
+    "\n",
+    "chev:\n",
+    "Time cost: 153, Space cost: 71\n",
+    "\n",
+    "----------------------------------\n",
+    "\n",
+    "Performances on \"avoid F\" with F = 4: #some F cells could actually be advantageous, so sometimes they are considered (the optimal path still doesn't go through F cells)\n",
+    "Manhattan distance: \n",
+    "Time cost: 153, Space cost: 71\n",
+    "\n",
+    "l2 norm:\n",
+    "Time cost: 189, Space cost: 71\n",
+    "\n",
+    "chev:\n",
+    "Time cost: 229, Space cost: 73\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dd4435a-a6bd-4809-8908-d05e0cfaadce",
+   "id": "b6176808-750c-4815-9000-156076a47001",
    "metadata": {},
    "outputs": [],
    "source": []
