--- a/inf-search/inf_search_2_problem.ipynb
+++ b/inf-search/inf_search_2_problem.ipynb
@@ -245,7 +245,7 @@
     "- **space_cost** - the maximum number of nodes in memory simultaneously.\n",
     "\n",
     "E' una UCS in cui la coda e' ordinata per euristica e non per costo del nodo/pathcost.\n",
-    "NOTA: UCS NON E' OTTIMALE\n"
+    "NOTA: Greedy NON E' OTTIMALE"
    ]
   },
   {
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,18 +329,10 @@
     "        # Retrieve node from the queue\n",
     "        node = queue.remove()  \n",
     "        if node.state == environment.goalstate:\n",
-    "            #nota: sto facendo il check sul nodo estratto e non sul figlio estratto, questo per garantire l'ottimalita.\n",
-    "            #In BFS posso fare il controllo sul figlio (con performance maggiori perche' evito di generare un livello di figli\n",
-    "            #ad un livello inferiore, che e' una misura esponenziale) perche' quando visito un nodo in BFS allora l'ho raggiunto\n",
-    "            #attraverso il percorso piu' breve (perche' il costo degli archi e' identico). In UCS invece il nodo che poppo potrebbe\n",
-    "            #avere un costo superiore del nodo che avrei avuto successivamente nella coda, quindi non faccio il check sui figli\n",
     "            return build_path(node), time_cost, space_cost\n",
     "                \n",
     "        # Look around\n",
     "        for action in range(environment.action_space.n):\n",
-    "            \n",
-    "            # Child node where value and pathcost are both the pathcost of parent + 1\n",
-    "            #il nostro value e' il pathcost, voglio ordinare la queue per pathcost \n",
     "\n",
     "            nextState = environment.sample(node.state, action)\n",
     "            \n",
@@ -349,7 +341,7 @@
     "            heuristic = H(p1, p2)\n",
     "\n",
     "            #formalmente sarebbe parentNode.pathcost + cost(parentNode, child), ma visto che siamo in una griglia ho sempre un offset di 1\n",
-    "            #Noda che Greedy Search usa SOLO l'euristica per riordinare la priority queue\n",
+    "            #Nota che Greedy Search usa SOLO l'euristica per riordinare la priority queue\n",
     "            child = Node(nextState, node, node.pathcost + 1, heuristic) \n",
     "\n",
     "            time_cost += 1\n",
@@ -370,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,34 +394,20 @@
     "        # Retrieve node from the queue\n",
     "        node = queue.remove()  \n",
     "        if node.state == environment.goalstate:\n",
-    "            #nota: sto facendo il check sul nodo estratto e non sul figlio estratto, questo per garantire l'ottimalita.\n",
-    "            #In BFS posso fare il controllo sul figlio (con performance maggiori perche' evito di generare un livello di figli\n",
-    "            #ad un livello inferiore, che e' una misura esponenziale) perche' quando visito un nodo in BFS allora l'ho raggiunto\n",
-    "            #attraverso il percorso piu' breve (perche' il costo degli archi e' identico). In UCS invece il nodo che poppo potrebbe\n",
-    "            #avere un costo superiore del nodo che avrei avuto successivamente nella coda, quindi non faccio il check sui figli\n",
     "            return build_path(node), time_cost, space_cost\n",
     "        \n",
     "        explored.add(node.state)\n",
     "        \n",
     "        # Look around\n",
     "        for action in range(environment.action_space.n):\n",
-    "            \n",
-    "            # Child node where value and pathcost are both the pathcost of parent + 1\n",
-    "            #il nostro value e' il pathcost, voglio ordinare la queue per pathcost \n",
     "\n",
     "            nextState = environment.sample(node.state, action)\n",
     "\n",
-    "            #NOTA: chiaramente l'euristica e' dal child state al goal state, mica dal parent node al goal state\n",
     "            p1 = environment.state_to_pos(nextState)\n",
     "            p2 = environment.state_to_pos(environment.goalstate)\n",
     "            heuristic = H(p1, p2)\n",
     "\n",
-    "            #formalmente sarebbe parentNode.pathcost + cost(parentNode, child), ma visto che siamo in una griglia ho sempre un offset di 1\n",
-    "            #Noda che Greedy Search usa SOLO l'euristica per riordinare la priority queue\n",
     "            child = Node(nextState, node, node.pathcost + 1, heuristic)  \n",
-    "\n",
-    "            #Per A*\n",
-    "            #child = Node(environment.sample(node.state, action), node, node.pathcost + 1, node.pathcost + 1 + heuristic) \n",
     "            \n",
     "            time_cost += 1\n",
     "            \n",
@@ -453,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -492,8 +470,8 @@
       "[['C' 'C' 'S' 'C']\n",
       " ['C' 'C' 'W' 'C']\n",
       " ['C' 'C' 'C' 'C']\n",
-      " ['C' 'C' 'W' 'W']\n",
-      " ['C' 'C' 'W' 'G']]\n"
+      " ['C' 'W' 'W' 'W']\n",
+      " ['C' 'C' 'C' 'G']]\n"
      ]
     },
     {
@@ -522,19 +500,19 @@
       "\u001b[96m########################################################\u001b[0m\n",
       "\u001b[96m#######  GREEDY BEST FIRST GRAPH SEARCH PROBLEM  #######\u001b[0m\n",
       "\u001b[96m########################################################\u001b[0m\n",
-      "Your solution: None\n",
-      "N° of nodes explored: 61\n",
+      "Your solution: [(0, 3), (1, 3), (2, 3), (2, 2), (2, 1), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
+      "N° of nodes explored: 45\n",
       "Max n° of nodes in memory: 15\n",
       "\n",
-      "\u001b[91m> Your solution is not correct, should be: [(0, 3), (1, 3), (2, 3), (2, 2), (2, 1), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
+      "\u001b[1m\u001b[92m===> Your solution is correct!\n",
       "\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "#envname = \"SmallMaze-v0\"\n",
+    "envname = \"SmallMaze-v0\"\n",
     "#envname = \"GrdMaze-v0\"\n",
-    "envname = \"BlockedMaze-v0\"\n",
+    "#envname = \"BlockedMaze-v0\"\n",
     "\n",
     "environment = gym.make(envname)\n",
     "environment.render()\n",
@@ -650,8 +628,6 @@
     "    #    \n",
     "    #time_cost = 1\n",
     "    #space_cost = 1\n",
-    "\n",
-    "    #E' COPIA INCOLLA DI GREEDY SEARCH CON CAMBIO DEL VALORE DEL NODO: diventa parent.pathcost + 1 + heuristic\n",
     "    \n",
     "    queue = PriorityQueue() #ordinata per euristica\n",
     "    p1 = environment.state_to_pos(environment.startstate)\n",
@@ -676,18 +652,10 @@
     "        # Retrieve node from the queue\n",
     "        node = queue.remove()  \n",
     "        if node.state == environment.goalstate:\n",
-    "            #nota: sto facendo il check sul nodo estratto e non sul figlio estratto, questo per garantire l'ottimalita.\n",
-    "            #In BFS posso fare il controllo sul figlio (con performance maggiori perche' evito di generare un livello di figli\n",
-    "            #ad un livello inferiore, che e' una misura esponenziale) perche' quando visito un nodo in BFS allora l'ho raggiunto\n",
-    "            #attraverso il percorso piu' breve (perche' il costo degli archi e' identico). In UCS invece il nodo che poppo potrebbe\n",
-    "            #avere un costo superiore del nodo che avrei avuto successivamente nella coda, quindi non faccio il check sui figli\n",
     "            return build_path(node), time_cost, space_cost\n",
     "                \n",
     "        # Look around\n",
     "        for action in range(environment.action_space.n):\n",
-    "            \n",
-    "            # Child node where value and pathcost are both the pathcost of parent + 1\n",
-    "            #il nostro value e' il pathcost, voglio ordinare la queue per pathcost \n",
     "\n",
     "            nextState = environment.sample(node.state, action)\n",
     "            \n",
@@ -695,13 +663,10 @@
     "            p2 = environment.state_to_pos(environment.goalstate)\n",
     "            heuristic = H(p1, p2)\n",
     "\n",
-    "            #formalmente sarebbe parentNode.pathcost + cost(parentNode, child), ma visto che siamo in una griglia ho sempre un offset di 1\n",
-    "            #Noda che Greedy Search usa SOLO l'euristica per riordinare la priority queue\n",
     "            child = Node(nextState, node, node.pathcost + 1, node.pathcost + 1 + heuristic) \n",
     "\n",
     "            time_cost += 1\n",
     "\n",
-    "            #domanda: Tree search controlla che il child non sia in Explored, e nemmeno nella frontiera!!!\n",
     "            queue.add(child)\n",
     "            \n",
     "            #if child.state not in queue: #this needs to be removed\n",
@@ -742,8 +707,6 @@
     "    # YOUR CODE HERE ...\n",
     "    #\n",
     "\n",
-    "    #E' COPIA INCOLLA DI GREEDY SEARCH CON CAMBIO DEL VALORE DEL NODO: diventa parent.pathcost + 1 + heuristic\n",
-    "\n",
     "    queue = PriorityQueue() #ordinata per euristica\n",
     "    p1 = environment.state_to_pos(environment.startstate)\n",
     "    p2 = environment.state_to_pos(environment.goalstate)\n",
@@ -761,11 +724,6 @@
     "        # Retrieve node from the queue\n",
     "        node = queue.remove()  \n",
     "        if node.state == environment.goalstate:\n",
-    "            #nota: sto facendo il check sul nodo estratto e non sul figlio estratto, questo per garantire l'ottimalita.\n",
-    "            #In BFS posso fare il controllo sul figlio (con performance maggiori perche' evito di generare un livello di figli\n",
-    "            #ad un livello inferiore, che e' una misura esponenziale) perche' quando visito un nodo in BFS allora l'ho raggiunto\n",
-    "            #attraverso il percorso piu' breve (perche' il costo degli archi e' identico). In UCS invece il nodo che poppo potrebbe\n",
-    "            #avere un costo superiore del nodo che avrei avuto successivamente nella coda, quindi non faccio il check sui figli\n",
     "            return build_path(node), time_cost, space_cost\n",
     "        \n",
     "        explored.add(node.state)\n",
@@ -773,9 +731,6 @@
     "        # Look around\n",
     "        for action in range(environment.action_space.n):\n",
     "            \n",
-    "            # Child node where value and pathcost are both the pathcost of parent + 1\n",
-    "            #il nostro value e' il pathcost, voglio ordinare la queue per pathcost \n",
-    "\n",
     "            nextState = environment.sample(node.state, action)\n",
     "\n",
     "            #NOTA: chiaramente l'euristica e' dal child state al goal state, mica dal parent node al goal state\n",
@@ -783,8 +738,6 @@
     "            p2 = environment.state_to_pos(environment.goalstate)\n",
     "            heuristic = H(p1, p2)\n",
     "\n",
-    "            #formalmente sarebbe parentNode.pathcost + cost(parentNode, child), ma visto che siamo in una griglia ho sempre un offset di 1\n",
-    "            #Noda che Greedy Search usa SOLO l'euristica per riordinare la priority queue\n",
     "            child = Node(nextState, node, node.pathcost + 1, node.pathcost + 1 + heuristic)  \n",
     "\n",
     "            #Per A*\n",
@@ -892,9 +845,9 @@
     }
    ],
    "source": [
-    "#envname = \"SmallMaze-v0\"\n",
+    "envname = \"SmallMaze-v0\"\n",
     "#envname = \"GrdMaze-v0\"\n",
-    "envname = \"BlockedMaze-v0\"\n",
+    "#envname = \"BlockedMaze-v0\"\n",
     "\n",
     "environment = gym.make(envname)\n",
     "environment.render()\n",
