--- a/inf-search/inf_search_2_problem.ipynb
+++ b/inf-search/inf_search_2_problem.ipynb
@@ -279,20 +279,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "#CONSTANTS, CHOOSE THE HEURISTIC FUNCTION HERE\n",
     "\n",
-    "H = Heu.l1_norm\n",
+    "#H = Heu.l1_norm\n",
     "#H = Heu.l2_norm\n",
-    "#H = Heu.chebyshev"
+    "H = Heu.chebyshev"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,14 +346,10 @@
     "\n",
     "            time_cost += 1\n",
     "\n",
-    "            #domanda: Tree search controlla che il child non sia in Explored, e nemmeno nella frontiera!!!\n",
     "            queue.add(child)\n",
-    "            \n",
-    "            #if child.state not in queue: #this needs to be removed\n",
-    "            #    queue.add(child)\n",
     "                \n",
-    "            if present_with_higher_cost(queue, child):\n",
-    "                queue.replace(child)\n",
+    "            #if present_with_higher_cost(queue, child):\n",
+    "            #    queue.replace(child)\n",
     "                \n",
     "        space_cost = max(space_cost, len(queue))\n",
     "        \n",
@@ -362,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,13 +379,13 @@
     "    heuristic = H(p1, p2)\n",
     "    queue.add(Node(environment.startstate, None, 0, heuristic)) #NECESSARIO INIZIALIZZARE CON L'EURISTICA\n",
     "    \n",
-    "    explored = set()\n",
+    "    explored = set() #graph search uses the explored set\n",
     "    time_cost = 1\n",
     "    space_cost = 1\n",
     "    \n",
     "    while True:\n",
     "        if queue.is_empty(): \n",
-    "            return None, time_cost, space_cost \n",
+    "            return None, time_cost, space_cost\n",
     "        \n",
     "        # Retrieve node from the queue\n",
     "        node = queue.remove()  \n",
@@ -431,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -479,15 +475,15 @@
      "output_type": "stream",
      "text": [
       "Which heuristic did you use? (l1_norm, l2_norm, chebyshev)\n",
-      " l1_norm\n"
+      " chebyshev\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "----------- USING HEURISTIC:  l1_norm\n",
-      "H is: l1_norm\n",
+      "----------- USING HEURISTIC:  chebyshev\n",
+      "H is: chebyshev\n",
       "\u001b[96m########################################################\u001b[0m\n",
       "\u001b[96m#######  GREEDY BEST FIRST TREE SEARCH PROBLEM  ########\u001b[0m\n",
       "\u001b[96m########################################################\u001b[0m\n",
@@ -500,9 +496,9 @@
       "\u001b[96m########################################################\u001b[0m\n",
       "\u001b[96m#######  GREEDY BEST FIRST GRAPH SEARCH PROBLEM  #######\u001b[0m\n",
       "\u001b[96m########################################################\u001b[0m\n",
-      "Your solution: [(0, 3), (1, 3), (2, 3), (2, 2), (2, 1), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
-      "N° of nodes explored: 45\n",
-      "Max n° of nodes in memory: 15\n",
+      "Your solution: [(0, 1), (1, 1), (2, 1), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
+      "N° of nodes explored: 53\n",
+      "Max n° of nodes in memory: 16\n",
       "\n",
       "\u001b[1m\u001b[92m===> Your solution is correct!\n",
       "\u001b[0m\n"
@@ -606,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,12 +664,9 @@
     "            time_cost += 1\n",
     "\n",
     "            queue.add(child)\n",
-    "            \n",
-    "            #if child.state not in queue: #this needs to be removed\n",
-    "            #    queue.add(child)\n",
     "                \n",
-    "            if present_with_higher_cost(queue, child):\n",
-    "                queue.replace(child)\n",
+    "            #if present_with_higher_cost(queue, child):\n",
+    "            #    queue.replace(child)\n",
     "                \n",
     "        space_cost = max(space_cost, len(queue))\n",
     "    \n",
@@ -682,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -805,8 +798,8 @@
       "[['C' 'C' 'S' 'C']\n",
       " ['C' 'C' 'W' 'C']\n",
       " ['C' 'C' 'C' 'C']\n",
-      " ['C' 'C' 'W' 'W']\n",
-      " ['C' 'C' 'W' 'G']]\n"
+      " ['C' 'W' 'W' 'W']\n",
+      " ['C' 'C' 'C' 'G']]\n"
      ]
     },
     {
@@ -814,32 +807,32 @@
      "output_type": "stream",
      "text": [
       "Which heuristic did you use? (l1_norm, l2_norm, chebyshev)\n",
-      " l2_norm\n"
+      " chebyshev\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "----------- USING HEURISTIC:  l2_norm\n",
-      "H is: l2_norm\n",
+      "----------- USING HEURISTIC:  chebyshev\n",
+      "H is: chebyshev\n",
       "\u001b[96m#########################################\u001b[0m\n",
       "\u001b[96m#######  A* TREE SEARCH PROBLEM  ########\u001b[0m\n",
       "\u001b[96m#########################################\u001b[0m\n",
-      "Your solution: time-out\n",
-      "N° of nodes explored: 100001\n",
-      "Max n° of nodes in memory: 75001\n",
+      "Your solution: [(0, 1), (1, 1), (2, 1), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
+      "N° of nodes explored: 16977\n",
+      "Max n° of nodes in memory: 12733\n",
       "\n",
-      "\u001b[91m> Your solution is not correct, should be: [(0, 1), (1, 1), (2, 1), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
+      "\u001b[1m\u001b[92m===> Your solution is correct!\n",
       "\u001b[0m\n",
       "\u001b[96m##########################################\u001b[0m\n",
       "\u001b[96m#######  A* GRAPH SEARCH PROBLEM  ########\u001b[0m\n",
       "\u001b[96m##########################################\u001b[0m\n",
-      "Your solution: None\n",
+      "Your solution: [(0, 1), (1, 1), (2, 1), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
       "N° of nodes explored: 61\n",
-      "Max n° of nodes in memory: 15\n",
+      "Max n° of nodes in memory: 16\n",
       "\n",
-      "\u001b[91m> Your solution is not correct, should be: [(0, 1), (1, 1), (2, 1), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
+      "\u001b[1m\u001b[92m===> Your solution is correct!\n",
       "\u001b[0m\n"
      ]
     }
