--- a/Ex-1/AI_exam_ex_1.ipynb
+++ b/Ex-1/AI_exam_ex_1.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 70,
    "id": "caecc567",
    "metadata": {},
    "outputs": [
@@ -198,26 +198,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 77,
    "id": "a6f9a585-c281-4ec0-863e-6d4ec3b0bf12",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Path finding solution\n",
-    "def present_with_higher_value(queue, node):\n",
+    "def present_with_higher_value(queue, node): #ordina la coda per VALORE/Desiderabilita'/valori crescenti di f\n",
     "    if node.state in queue:\n",
     "        if queue[node.state].value > node.value: \n",
     "            return True\n",
     "    return False\n",
     "\n",
     "#all the heuristics\n",
-    "H = Heu.l1_norm #manhattan - best one, closer to h*\n",
+    "H = Heu.l1_norm #manhattan - best one, closer to h* because of how boat can move\n",
     "#H = Heu.l2_norm #distanza vettoriale\n",
     "#H = Heu.chebyshev\n",
     "\n",
     "def a_star(environment, cost_dict): #graph search, returns (path, time_cost, space_cost)\n",
     "\n",
-    "    queue = PriorityQueue() #ordinata per euristica\n",
+    "    queue = PriorityQueue() #frontiera ordinata per euristica\n",
     "    p1 = environment.state_to_pos(environment.startstate)\n",
     "    p2 = environment.state_to_pos(environment.goalstate)\n",
     "    heuristic = H(p1, p2)\n",
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 78,
    "id": "dadd6fc4",
    "metadata": {},
    "outputs": [],
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 79,
    "id": "d28ff6c7",
    "metadata": {},
    "outputs": [
@@ -383,8 +383,7 @@
     "Time cost: 189, Space cost: 71\n",
     "\n",
     "chev:\n",
-    "Time cost: 229, Space cost: 73\n",
-    "\n"
+    "Time cost: 229, Space cost: 73"
    ]
   },
   {
